--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1"
@@ -21,6 +23,8 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "sass": "^1.38.2",
+    "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
