--- a/backend/docker/Dockerfile
+++ b/backend/docker/Dockerfile
@@ -1,8 +1,8 @@
 FROM openjdk:11 as builder
 WORKDIR /app
-COPY ./ ./
-RUN chmod +x ./gradlew
-RUN ./gradlew build
+COPY ../ ./
+RUN chmod +x ../gradlew
+RUN ../gradlew build
 
 FROM adoptopenjdk:11-jdk
 COPY --from=builder build/libs/*.jar backend.jar
