--- a/frontend/docker/Dockerfile
+++ b/frontend/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:alpine
 WORKDIR /app
-COPY ./package.json ./
+COPY ../package.json ./
 RUN npm install --force
-COPY ./ ./
+COPY ../ ./
 RUN npm run build
